Spacing fix pt2

--- a/assets/css/ProjectHome.css
+++ b/assets/css/ProjectHome.css
@@ -1,3 +1,3 @@
 .MySpace{
-    padding: 2% 2% 5% 5%;
+    padding: 10px;
 }
